[package]
name = "rtvcs"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]

[features]
default = ["wasm"]
wasm = ["stdweb"]

[lib]
name = "rtvcs"
path = "src/lib.rs"

[[bin]]
name = "rtvcs_web"
path = "src/web.rs"
required-features = ["wasm"]

[dependencies]
stdweb = { version = "0.2.0", optional = true }
uuid = { version = "0.5", features = ["serde"] }
serde = "1.0.24"
serde_derive = "1.0.24"


[dev-dependencies]
rand = "0.4.2"
